fixes admin bar layout bug

--- a/curatescape/css/screen.css
+++ b/curatescape/css/screen.css
@@ -1925,7 +1925,7 @@ body.contribution #flash ul{
 #admin-bar a.highlight{
     text-decoration: none;
     background: #444;
-    padding: 5px;
+    padding: 0 5px;
     border-radius: 3px;
     text-shadow: 1px 1px 1px #000;
     box-shadow: 0 0 3px #000;
